tests/negative/Test4.sp
(* Testing parameters are function calls with wrong number *)

main(main(3,4));
main:Int(a:Int, b:[String]){
	return 2;
}